--- a/crud.html
+++ b/crud.html
@@ -58,7 +58,7 @@ label{
   
     </head>
     <body>
-<img id="img" src="images/kolesa.PNG">
+<img id="img" src="kolesa.PNG">
        
         <div class="page-header">
             
